# AnimeQ

./: .env.example  .gitignore  Makefile  README.md  animeq-macos.spec  animeq-windows.spec  app_dev.py  index.html  package.json  tailwind.config.js  vite.config.ts
functions/: tsconfig.json
functions/api/: animeonsen.ts  proxy.ts
python/: pyproject.toml
python/src/animeq/: __init__.py  __main__.py  main.py  server.py  tauri.conf.json
python/src/animeq/capabilities/: default.toml
python/src/animeq/icons/: icon.icns
python/src/script/: get_token.py
shared/: animeonsen-relay.ts
src/: index.css  main.tsx  vite-env.d.ts
src/components/anime/: AnimeCard.tsx
src/components/filters/: FilterBar.tsx
src/components/layout/: Footer.tsx  Navbar.tsx  RootLayout.tsx
src/components/player/: SourceSelector.tsx  TrailerPlayer.tsx  VideoPlayer.tsx
src/components/ui/: Feedback.tsx  Logo.tsx  PremiumBadge.tsx  Skeletons.tsx
src/hooks/: useAsync.ts
src/lib/: constants.ts  db.ts  filterQuery.ts  store.ts  utils.ts
src/lib/api/: animeschedule.ts  jikan.ts  matching.ts  proxy.ts  sources.ts
src/lib/api/resolvers/: animeonsen.ts  animex.ts  index.ts  kickassanime.ts
src/pages/: AnimeDetail.tsx  Browse.tsx  Home.tsx  Library.tsx  NotFound.tsx  Schedule.tsx  Search.tsx  Settings.tsx  Watch.tsx
src/types/: index.ts
vite/: proxy-plugin.ts
