[project]
name = "animeq"
version = "1.0.0"
description = "AnimeQ — premium anime streaming desktop app (Pytauri)."
requires-python = ">=3.10, <3.14"
dependencies = [
    "pydantic == 2.*",
    "anyio == 4.*",
    "pytauri == 0.6.*",
    "pytauri-wheel == 0.6.*",
    "pyinstaller == 6.14.1",
    "jurigged == 0.6.1",
    "httpx==0.28.1",
    "fastapi==0.115.*",
    "uvicorn==0.34.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
artifacts = ["src/animeq/frontend/", "src/animeq/icons/"]
